# tor

./: .flake8  .gitignore  .gitlab-ci.yml  .mailmap  .pre-commit-config.yaml  .ruff.toml  .travis.yml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_OF_MERIT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  commands.json  helpers.py  main.py  processing.py  pyproject.toml  requirements.txt  setup.py  strings.py  tox.ini
.cache/v/cache/: lastfailed
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: automated-tests.yml  build_and_release.yml  build_and_test.yml  bump-version.yml  publish.yml
habitat/: README.md  plan.sh
habitat/hooks/: run
requirements/: base.txt  dev.txt
scripts/: clear_inprogress.py  clear_submissions_from_queue.py
test/automatic_assessment/: test_automatic_assessment.py  test_helpers.py
test/core/: test_admin_commands.py  test_config.py
test/helpers/: test_flair_helpers.py
test/validation/: helpers.py  test_automatic_assessment.py  test_formatting_validation.py  test_helpers.py
test/validation/transcriptions/invalid/: autogenerated-long-hyphen.txt  fenced-code-block_missing-separators.txt  missing-separators.txt
test/validation/transcriptions/valid/: 185018.txt  203629.txt  203672.txt  204957.txt  208011.txt  208027.txt  209546.txt  209603.txt  209722.txt  377970.txt  facebook_example_new_footer.txt  image_without_text_template.txt
tor/: __init__.py  archiver.py  backup.py  commands.json  main.py  ocr.py
tor/automatic_assessment/: automatic_assessment.py  formatting_errors.py
tor/cli/: __init__.py  _base.py  backup.py  main.py  moderator.py  poetry2setup.py
tor/core/: __init__.py  admin_commands.py  blossom.py  blossom_wrapper.py  commands.csv  commands.json  commands.yml  config.py  heartbeat.py  helpers.py  inbox.py  initialize.py  mentions.py  posts.py  strings.py  user_interaction.py  users.py  validation.py
tor/helpers/: __init__.py  flair.py  misc.py  reddit_ids.py  threaded_worker.py  wiki.py  youtube.py
tor/strings/: __init__.py  debug.py  en_US.yml  ocr.py  posts.py  responses.py  urls.py
tor/test/: __init__.py
tor/test/core/: __init__.py  test_admin_commands.py  test_helpers.py
tor/test/helpers/: __init__.py  test_flair_helpers.py
tor/test/validation/: __init__.py  helpers.py  test_formatting_validation.py
tor/test/validation/transcriptions/invalid/: bold-header_heading-with-dashes.txt  fenced-code-block.txt  heading-with-dashes.txt  malformed-footer.txt  unescaped-heading.txt  unescaped_username_subreddit.txt
tor/test/validation/transcriptions/valid/: 190177.txt  204426.txt  204803.txt  204825.txt  204937.txt  205138.txt  208018.txt  213568.txt  213981.txt  reddit_comment_template.txt  reddit_post_template.txt  reddit_post_template_new_footer.txt  tumblr_template_new_footer.txt
tor/validation/: __init__.py  automatic_assessment.py  formatting_errors.py  formatting_issues.py  formatting_validation.py  helpers.py  transcription_validation.py
tor/validation/formatting_checks/: __init__.py  header.py
