[tool.poetry]
name = "tor"
version = "4.1.0"
description = "A bot that handles moderating and scoring in /r/TranscribersOfReddit"
authors = ["Grafeas Group <devs@grafeas.org>"]
license = "MIT"
classifiers = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: End Users/Desktop',
    'Topic :: Communications :: BBS'
]
repository = "https://github.com/GrafeasGroup/tor"
homepage = "https://github.com/GrafeasGroup/tor"
exclude = ['test', 'test.*', '*.test.*', '*.test']
include = ["commands.json", "tor/strings/*.yml"]

[tool.poetry.dependencies]
python = "^3.6"
sh = "^1.12"
bugsnag = "^3.6"
requests = "^2.22"
slackclient = "^1"
PyYaml = "^5.1"
blossom-wrapper = { git = "https://github.com/GrafeasGroup/blossom-wrapper.git", branch = "master" }
python-dotenv = "^0.14.0"
praw = "^7.1.0"

[tool.poetry.dev-dependencies]
better-exceptions = "^0.2.2"
pytest = "^5.1"
pytest-cov = "^2.7"
flake8 = "^3.7.9"
mypy = "^0.761"
black = "^19.10b0"

[tool.poetry.scripts]
tor-moderator = "tor.cli.main:main"

[tool.poetry.extras]
ci = ['pytest', 'pytest-cov']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
